Added Information and css

--- a/dino.html
+++ b/dino.html
@@ -3,112 +3,149 @@
 <html>
 
 <head>
-    <title>Audrey Norris</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <title>Audrey Norris</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="navBar">
-        <div id="leftSide">
-            <a href="index.html">
-            <h1>Audrey Norris - Programmer/Designer</h1>
-            </a>
-        </div>
-        <div id="rightSide">
-            <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href = "https://sites.google.com/view/audreynorrisportfolio">Old Portfolio</a></li>
-                <li><a href = "mailto:audreynorris@u.boisestate.edu?subject = Feedback&body = Message"><i class="fa-regular fa-envelope"></i></a></li>
-            </ul>
-        </div>
+  <div id="navBar">
+    <div id="leftSide">
+      <a href="index.html">
+        <h1>Audrey Norris - Programmer/Designer</h1>
+      </a>
     </div>
-    <div id="mainBody">
-        <h1>Dino Dice</h1>
-        <p>Dino Dice was a mobile phone app I created while working for a company named Nerdy Dragon. I learned how to use Construct 3, JSON storage structures, and how to communicate with clients.</p>
-    
-        <div class="row">
-            <div id="dinoDiceCarousel" class="carousel slide col-6" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/Dino1.png" class="d-block w-100 img-fluid" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/Dino2.png" class="d-block w-100 img-fluid" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/Dino3.png" class="d-block w-100 img-fluid" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/Dino4.png" class="d-block w-100 img-fluid" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-              <div class="col-6">
-                <p>
-                    Dino Dice is the first project I worked on during my internship at Nerdy Dragon. The goal of the project was to create a virtual version of some math exercises DMTI
-                     had created. I created this project in Construct 3 and was the sole programmer and game designer for this project. I did not create the graphics for this game but I 
-                     did create the sounds that play when you get and answer right or wrong. It is now available on the Apple Store and Google Play.
-                </p>
-                <a href="https://apps.apple.com/us/app/dino-dice/id1626674361"><button>Apple</button></a>
-                <a href="https://play.google.com/store/apps/details?id=com.dmtinstitute.dinodice"><button>Android</button></a>
-                <h3>Tools Used:</h3>
-                <ul>
-                    <li>Construct 3</li>
-                    <li>X Code</li>
-                    <li> Paint 3D</li>
-                </ul>
-                <h3>Skills Learned:</h3>
-                <ul>
-                    <li>Client communication</li>
-                    <li>App Testing</li>
-                    <li>Block Coding</li>
-                    <li>JSON Storage</li>
-                    <li>Mobile App Development</li>
-                </ul>
-              </div>
-        </div>
-        
-    <div>
-      <h2>Process</h2>
+    <div id="rightSide">
+      <ul>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://sites.google.com/view/audreynorrisportfolio">Old Portfolio</a></li>
+        <li><a href="mailto:audreynorris@u.boisestate.edu?subject = Feedback&body = Message"><i
+              class="fa-regular fa-envelope"></i></a></li>
+      </ul>
+    </div>
+  </div>
+  <div id="mainBody">
+    <div class="container-fluid">
+    <div class="text-center">
+      <h1>Dino Dice</h1>
       <p>
-        To make this game I created three different scripted scenes within Construct 3: Menu, game and results. 
-        The main menu houses all the level selects and the audio options for the students. When the game starts it heads to that menu and checks to see if their is previous level data. 
-        If there isn't it creates a new storing system and if there is it loads the data and unlocks levels accordingly. 
-        Players can then cycle through game modes and levels before moving to the game screen. When the game scene loads it checks to see what level type the player selected and then 
-        runs the proper script for the level. Each of the four game modes has a separate script that goes through each part of the levels. Finally the results screen pulls 
-        the data from the level that was completed and shows the player their score. A player is then given the option to go to the next level or back to the home screen.
+        Dino Dice was a mobile phone app I created while working for a company named Nerdy Dragon. I learned how to use
+      Construct 3, JSON storage structures, and how to communicate with clients.
       </p>
     </div>
 
+    <hr/>
+    <div class="row">
+      <div id="dinoDiceCarousel" class="carousel slide col-6" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/Dino1.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Dino2.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Dino3.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Dino4.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="col-6">
+        <p>
+          Dino Dice is the first project I worked on during my internship at Nerdy Dragon. The goal of the project was
+          to create a virtual version of some math exercises DMTI
+          had created. I created this project in Construct 3 and was the sole programmer and game designer for this
+          project. I did not create the graphics for this game but I
+          did create the sounds that play when you get and answer right or wrong. It is now available on the Apple Store
+          and Google Play.
+        </p>
+
+        <h3>Tools Used:</h3>
+        <ul>
+          <li>Construct 3</li>
+          <li>X Code</li>
+          <li> Paint 3D</li>
+        </ul>
+        <h3>Skills Learned:</h3>
+        <ul>
+          <li>Client communication</li>
+          <li>App Testing</li>
+          <li>Block Coding</li>
+          <li>JSON Storage</li>
+          <li>Mobile App Development</li>
+        </ul>
+        <div class="d-flex justify-content-center w-100" id="app-button">
+          <button class="btn btn-primary w-100"><a href="https://apps.apple.com/us/app/dino-dice/id1626674361">Apple</a></button>
+          <button class="btn btn-primary w-100"><a href="https://play.google.com/store/apps/details?id=com.dmtinstitute.dinodice">Android</a></button>
+        </div>
+      </div>
     </div>
-    <script>
-        var coll = document.getElementsByClassName("collapsible");
-        var i;
+    </div>
+    <br />
+    <div class="container-fluid">
+      <h2>Process</h2>
+      <p>
+        To make this game I created three different scripted scenes within Construct 3: Menu, game and results.
+        The main menu houses all the level selects and the audio options for the students. When the game starts it heads
+        to that menu and checks to see if their is previous level data.
+        If there isn't it creates a new storing system and if there is it loads the data and unlocks levels accordingly.
+        Players can then cycle through game modes and levels before moving to the game screen. When the game scene loads
+        it checks to see what level type the player selected and then
+        runs the proper script for the level. Each of the four game modes has a separate script that goes through each
+        part of the levels. Finally the results screen pulls
+        the data from the level that was completed and shows the player their score. A player is then given the option
+        to go to the next level or back to the home screen.
+      </p>
+    <br />
+      <h2>Challenges</h2>
+      <p>
+        The first challenge I had with this game was figuring out how to create the actual level cycle. Before
+        completing this project I had never used Construct 3 before. To do this I create a variable that tracks the part of the question
+        and separated the level into different parts. The game tracks which part the player is on and then activates the code for that part. 
+        It's similar to a function but instead it's nested block code. The second challenge with this game was learning how to create 
+        scoring system. The actual idea was easy but I had to learn how to use JSON structures to store
+        information and then pull that information out to use. This took a long process of trial and error of finding out how to
+        setup the initial storage and rewrite it. The menu system does the initial pull of information into a temporary active
+        storage for the game to use. Whenever a player gets a new score the game checks to see if it is greater than the previous
+        score on a level and then it rewrites that key's information in the JSON storage.
+      </p>
+    </div>
+  </div>
+  </div>
+  <script>
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
 
-        for (i = 0; i < coll.length; i++) {
-            coll[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var content = this.nextElementSibling;
-                if (content.style.display === "block") {
-                    content.style.display = "none";
-                } else {
-                    content.style.display = "block";
-                }
-            });
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", function () {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.display === "block") {
+          content.style.display = "none";
+        } else {
+          content.style.display = "block";
         }
+      });
+    }
 
-    </script>
+  </script>
 </body>
 
 </html>
