--- a/contact.html
+++ b/contact.html
@@ -11,46 +11,53 @@
 </head>
 
     <body>
-        <div id="navBar" class="sticky-top">
-            <div id="leftSide">
-                <a href="index.html">
-                <h1>Audrey Norris - Programmer/Designer</h1>
-                </a>
-            </div>
-            <div id="rightSide">
-                <ul>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href = "https://sites.google.com/view/audreynorrisportfolio">Old Portfolio</a></li>
-                    <li><a href = "mailto:audreynorris@u.boisestate.edu?subject = Feedback&body = Message"><i class="fa-regular fa-envelope"></i></a></li>
+        <nav id="navBar" class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+            <div class="container-fluid">
+                <a id="navBrand" class="navbar-brand fs-2" href="#">Audrey Norris - Software Dev</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="contact.html">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="mailto:audreynorris@u.boisestate.edu?subject=Feedback&body=Message"><i class="far fa-envelope"></i></a>              </li>
                 </ul>
+              </div>
             </div>
-        </div>
-        <div class="d-flex">
-            <div id="contact" class="mh-100">
-                <h1>Contact Me</h1>
-                <h3>Need some work done? Contact me here!</h3>
-                <div class="mx-auto">
-                    <div class="row">
-                    <label>Name:</label>
-                    <br/>
-                    <input type="text" class="rounded-2"/>
-                </div>
+          </nav>
+            <div class="container-fluid">
                 <div class="row">
-                    <label>Email:</label>
-                    <br/>
-                    <input type="email" class="rounded-2"/>
+                    <div class="col-md-6">
+                        <h1>Contact Me</h1>
+                        <h3>Need some work done? Contact me here!</h3>
+                        <div class="mx-auto">
+                            <div class="row">
+                            <label>Name:</label>
+                            <br/>
+                            <input type="text" class="rounded-2"/>
+                        </div>
+                        <div class="row">
+                            <label>Email:</label>
+                            <br/>
+                            <input type="email" class="rounded-2"/>
+                        </div>
+                        <div class="row">
+                            <label>Question:</label>
+                            <br/>
+                            <textarea class="rounded-2"> </textarea>
+                        </div>
+                        <div class="row">
+                            <button class="btn">Submit</button>
+                        </div>
+                        </div>
+                        <span class="col-md-6"></span>  
                 </div>
-                <div class="row">
-                    <label>Question:</label>
-                    <br/>
-                    <textarea class="rounded-2"> </textarea>
-                </div>
-                <div class="row">
-                    <button class="btn">Submit</button>
-                </div>
-                </div>
-            
-            </div>
             <div id="contact-img"><img src="images/Contact.jpg" /></div>
         </div>
             
